@@ -1,4 +1,9 @@
-2008-04-02 Adam Schreiber  <sadam@clemson.edu>
+2008-04-17  Adam Schreiber  <sadam@clemson.edu>
+
+    * libseahorse/seahorse-hkp-source.c: Fix importing keys from hkp keyservers.
+    Patch from Mackenzie Morgan.  Fixes bug #528150
+
+2008-04-02  Adam Schreiber  <sadam@clemson.edu>
 
     * daemon/seahorse-service-crypto.c: Return key id of signer even when key
     is not found locally
